--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@ title: "Ohm.codes"
 
 <div class="py-16 sm:ps-2 md:ps-48 bg-white">
   <div class="flex flex-col">
-    <div class="hero w-96 mb-12">
+    <div class="hero w-full md:w-5/12 mb-12">
       <div class="hero-content flex-col">
         <div class="w-full mb-4">
           <img class="avatar rounded-3xl w-32 shadow-2xl" src="/assets/images/profile-small.webp" />
         </div>
-        <h2 class="text-2xl font-bold mb-5"> <strong>Hello!</strong> I'm Mads, software developer from Denmark 🇩🇰 </h2>
+        <h2 class="text-2xl font-bold mb-5">
+          <strong>Hello! 👋🏻</strong>
+          <span class="font-extralight">I'm Mads Ohm, computer science PhD and software developer from Denmark 🇩🇰</span>
+        </h2>
 
         <ul class="list-none p-0 w-full">
           <li class="mb-2">
