--- a/posts.html
+++ b/posts.html
@@ -9,12 +9,15 @@ title: "Posts | Ohm.codes"
 
 <div class="flex flex-col flex-wrap md:flex-row ms-2 md:ms-24">
   {% for post in site.posts %}
-  <a href="{{ post.url }}" class="w-11/12 md:w-3/12 block no-underline mr-2 mb-5 md:mr-5">
+  <a
+    href="{{ post.url }}"
+    class="w-11/12 md:w-3/12 block no-underline mr-2 mb-5 md:mr-5 hover:-translate-y-2 transition-transform"
+  >
     <div class="card bg-base-100 shadow-2xl border-t-4 border-t-violet-300 min-h-full">
       <div class="card-body">
         <h2 class="card-title">{{ post.title }}</h2>
         <p class="mb-12">{{ post.summary | default: post.content | strip_html | truncatewords: 25 }}</p>
-        <p class="text-violet-400 absolute bottom-8">{{ post.date | date: "%B %Y" }}</p>
+        <p class="text-violet-500 absolute bottom-8">{{ post.date | date: "%B %Y" }}</p>
       </div>
     </div>
   </a>
