--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: "Ohm.codes"
     <div class="hero w-full md:w-5/12 mb-12">
       <div class="hero-content flex-col">
         <div class="w-full mb-4">
-          <img class="avatar rounded-3xl w-32 shadow-2xl" src="/assets/images/profile-small.webp" />
+          <img class="avatar rounded-3xl w-32 shadow-2xl" src="/assets/images/profile-small.png" />
         </div>
         <h2 class="text-2xl font-bold mb-5">
           <strong>Hello! 👋🏻</strong>
