--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@ title: "Ohm.codes"
     href="{{ post.url }}"
     class="w-11/12 md:w-3/12 block no-underline mr-2 mb-5 md:mr-5 hover:-translate-y-2 transition-transform"
   >
-    <div class="card bg-base-100 shadow-2xl border-t-4 border-t-violet-300 min-h-full">
+    <div
+      class="card bg-base-100 shadow-xl hover:shadow-2xl border-t-4 border-t-violet-300 min-h-full transition-shadow"
+    >
       <div class="card-body">
         <h2 class="card-title">{{ post.title }}</h2>
         <p class="mb-12">{{ post.summary | default: post.content | strip_html | truncatewords: 25 }}</p>
