--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ title: "Ohm.codes"
 </div>
 
 <div class="prose ms-2 md:ms-48 mt-16 mb-4">
-  <h2>Latests posts</h2>
+  <h2>Latest posts</h2>
 </div>
 
 <div class="flex flex-col md:flex-row ms-2 md:ms-48">
